crates/unsoundness_checker/tests/snapshots/rules/typing_type_is_used/markdown_test__snippet_01.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
error[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:3:26
  |
1 | from typing_extensions import TypeIs
2 |
3 | def is_int(x: object) -> TypeIs[int]:
  |                          ^^^^^^^^^^^
4 |     return True
  |
info: rule `typing-type-is-used` was selected in the configuration file
